--- a/Evergreen/Discipline of Assent.html
+++ b/Evergreen/Discipline of Assent.html
@@ -149,7 +149,7 @@
     });
 </script>
 <p><strong>“The Discipline of Assent”</strong>, which has to do with <em>mindfulness</em> of our judgements.</p>
-<p>Basically making your beliefs pay rent.</p>
+<p>Basically <a href="Beliefs%20should%20pay%20rent.html">Beliefs should pay rent</a></p>
 <p>The idea is to only allow &quot;adequate&quot; beliefs into your inner citadel, or those beliefs you hold to be true.</p>
 <p>Here adequate means you cannot add more or less to it. </p>
 <p>One example Marcus Aurelius uses to illustrate this idea is the following:</p>
