--- a/Evergreen/There a finite number of offers per day that get distributed among listings.html
+++ b/Evergreen/There a finite number of offers per day that get distributed among listings.html
@@ -149,7 +149,8 @@
     });
 </script>
 <p>therefore auction pressure will be lower when there are more listings, this applies within property strata as well.</p>
-<p>for instance, there are finite number of buyers looking for a 2 bedroom, and they will be distributed among listings that have 2 bedrooms</p>
+<p>the way offers are distributed will be weighted by the perceived value of the house </p>
+<p>for instance, there are finite number of buyers looking for a 2 bedroom, and they will be distributed among listings that have 2 bedrooms, </p>
 <p>this might be just a restatement of supply and demand??</p>
 
                     </main>
