--- a/print.html
+++ b/print.html
@@ -2327,7 +2327,8 @@ It's challenging. </p>
     });
 </script>
 <p>therefore auction pressure will be lower when there are more listings, this applies within property strata as well.</p>
-<p>for instance, there are finite number of buyers looking for a 2 bedroom, and they will be distributed among listings that have 2 bedrooms</p>
+<p>the way offers are distributed will be weighted by the perceived value of the house </p>
+<p>for instance, there are finite number of buyers looking for a 2 bedroom, and they will be distributed among listings that have 2 bedrooms, </p>
 <p>this might be just a restatement of supply and demand??</p>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.18/dist/katex.min.css" integrity="sha384-zTROYFVGOfTw7JV7KUu8udsvW2fx4lWOsCEDqhBreBwlHI4ioVRtmIvEThzJHGET" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.18/dist/katex.min.js" integrity="sha384-GxNFqL3r9uRJQhR+47eDxuPoNE7yLftQM8LcxzgS4HT73tp970WS/wV5p8UzCOmb" crossorigin="anonymous"></script>
