--- a/Evergreen/§Books.html
+++ b/Evergreen/§Books.html
@@ -155,6 +155,8 @@
 <li><a href="%C2%A7Cognitive%20Stuff.html">§Cognitive Stuff</a></li>
 <li><a href="%C2%A7Philosophy.html">§Philosophy</a></li>
 <li><a href="%C2%A7Rationality.html">§Rationality</a></li>
+<li><a href="%C2%A7The%20Mind%20is%20Flat.html">§The Mind is Flat</a></li>
+<li><a href="%C2%A7How%20not%20to%20be%20wrong.html">§How not to be wrong</a></li>
 </ol>
 
                     </main>
