--- a/Evergreen/§crypto.html
+++ b/Evergreen/§crypto.html
@@ -202,6 +202,7 @@
 <ol>
 <li><a href="%C2%A7Adam%20Back&#x27;s%20Hashcash.html">§Adam Back's Hashcash</a></li>
 <li><a href="%C2%A7bitcoin%20paper.html">§bitcoin paper</a></li>
+<li><a href="%C2%A7ethereum%20whitepaper.html">§ethereum whitepaper</a></li>
 </ol>
 
                     </main>
