--- a/print.html
+++ b/print.html
@@ -6128,6 +6128,8 @@ a sleeping family is vulnerable for only 4 hours instead of 8.</p>
 <li><a href="Evergreen/%C2%A7Cognitive%20Stuff.html">§Cognitive Stuff</a></li>
 <li><a href="Evergreen/%C2%A7Philosophy.html">§Philosophy</a></li>
 <li><a href="Evergreen/%C2%A7Rationality.html">§Rationality</a></li>
+<li><a href="Evergreen/%C2%A7The%20Mind%20is%20Flat.html">§The Mind is Flat</a></li>
+<li><a href="Evergreen/%C2%A7How%20not%20to%20be%20wrong.html">§How not to be wrong</a></li>
 </ol>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.18/dist/katex.min.css" integrity="sha384-zTROYFVGOfTw7JV7KUu8udsvW2fx4lWOsCEDqhBreBwlHI4ioVRtmIvEThzJHGET" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.18/dist/katex.min.js" integrity="sha384-GxNFqL3r9uRJQhR+47eDxuPoNE7yLftQM8LcxzgS4HT73tp970WS/wV5p8UzCOmb" crossorigin="anonymous"></script>
@@ -6910,6 +6912,7 @@ https://www.nytimes.com/2018/05/11/crosswords/how-to-make-crossword-puzzle-grid.
 <ol>
 <li><a href="Evergreen/%C2%A7Adam%20Back&#x27;s%20Hashcash.html">§Adam Back's Hashcash</a></li>
 <li><a href="Evergreen/%C2%A7bitcoin%20paper.html">§bitcoin paper</a></li>
+<li><a href="Evergreen/%C2%A7ethereum%20whitepaper.html">§ethereum whitepaper</a></li>
 </ol>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.18/dist/katex.min.css" integrity="sha384-zTROYFVGOfTw7JV7KUu8udsvW2fx4lWOsCEDqhBreBwlHI4ioVRtmIvEThzJHGET" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.18/dist/katex.min.js" integrity="sha384-GxNFqL3r9uRJQhR+47eDxuPoNE7yLftQM8LcxzgS4HT73tp970WS/wV5p8UzCOmb" crossorigin="anonymous"></script>
